--- a/src/app/paginas/formulario/formulario.component.html
+++ b/src/app/paginas/formulario/formulario.component.html
@@ -1,27 +1,49 @@
 <h1>Formulario</h1>
+
+{{ formulario.value | json }}
+
+{{ formulario.status | json  }}
 <div class="container">
     <div class="row">
         <div class="col-4 m-auto">
             <form [formGroup]="formulario" id="formularioPokemon" (ngSubmit)="enviar(formulario.value)">
-                <div class="form-group justify-content-center">
-                    <label for="nombre">Id</label>
-                    <input class="form-control mt-2 mb-2"
-                        type="text" 
-                        placeholder="Id producto" 
-                        formControlName="id" disabled>
-
-                    <label for="nombre">Nombre</label>
-                    <input class="form-control mt-2 mb-2"
-                        type="text" 
-                        placeholder="nombre del producto" 
-                        formControlName="nombre">
-
-                    <br>
-                    <input class="my-2 mt-2 btn btn-block btn-warning" 
-                                                type="submit" 
-                                                form="formularioPokemon" [disabled]="formulario.invalid" 
-                                                value="enviar">
-                </div>
+              <!-- { "imagen": "", "titulo": "", "fecha": "", "textoCorto": "", "texto": "" }  -->
+              <div class="form-group">
+                <label for="titulo">Titulo</label>
+                <input
+                formControlName="titulo"
+                type="text"
+                class="form-control"
+                id="titulo" placeholder="Titulo">
+              </div>
+              <div class="form-group">
+                <label for="imagen">Imagen</label>
+                <input
+                formControlName="imagen"
+                type="text"
+                class="form-control"
+                id="imagen" placeholder="Imagen">
+              </div>
+              <div class="form-group">
+                <label for="textoCorto">Texto Corto</label>
+                <input
+                formControlName="textoCorto"
+                type="text"
+                class="form-control"
+                id="textoCorto" placeholder="Texto Corto">
+              </div>
+              <div class="form-group">
+                <label for="texto">Texto</label>
+                <input
+                formControlName="texto"
+                type="text"
+                class="form-control"
+                id="texto" placeholder="Texto">
+              </div>
+              <input class="my-2 mt-2 btn btn-block btn-warning"
+                type="submit"
+                form="formularioPokemon" [disabled]="formulario.invalid"
+                value="enviar">
             </form>
         </div>
     </div>
