Mas o menos terminado

--- a/src/app/paginas/formulario/formulario.component.html
+++ b/src/app/paginas/formulario/formulario.component.html
@@ -40,6 +40,14 @@
                 class="form-control"
                 id="texto" placeholder="Texto">
               </div>
+              <div class="form-group">
+                <label for="fecha">Fecha</label>
+                <input
+                formControlName="fecha"
+                type="date"
+                class="form-control"
+                id="fecha" placeholder="Fecha">
+              </div>
               <input class="my-2 mt-2 btn btn-block btn-warning"
                 type="submit"
                 form="formularioPokemon" [disabled]="formulario.invalid"
