--- a/src/app/paginas/principal/principal.component.html
+++ b/src/app/paginas/principal/principal.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col">
       <ul class="list-group">
-        <li class="list-group-item" *ngFor="let noticia of lista" (click)="verDetalle(noticia)">
+        <li class="list-group-item" *ngFor="let noticia of lista | ordenarPorFecha" (click)="verDetalle(noticia)">
           <h5><b>{{ noticia.titulo }}</b></h5>
-          {{ noticia.textoCorto }}
+          {{ noticia.fecha }} - {{ noticia.textoCorto }}
         </li>
       </ul>
     </div>
